package io.github.ikws4.dew.ecs;

public abstract class Bundle {
  public abstract Object[] unpack();
}
