package io.github.ikws4.dew.ecs;

public interface Plugin {
  void build(World world);
}
